fix: jdk 1.8 build errors